# projetSimu

./: .gitignore  CMakeLists.txt  DiagrammeUML.zargo  README.md  résumé git
img/: multianimated.xml
src/: CarteCollision.cpp  CarteCollision.h  Perso.cpp  Perso.h  main.cpp
src/drawlib/: animatedsprite.cpp  animatedsprite.h  map.cpp  map.h  particle.cpp  particle.h  particleeffect.cpp  particleeffect.h  particleengine.cpp  particleengine.h  particlemotor.cpp  particlemotor.h  particletemplate.cpp  particletemplate.h
src/tinyxml2/: tinyxml2.cpp  tinyxml2.h
tests/: CMakeLists.txt  test_fps.cpp  testanimatedsprite.cpp  testfps.cpp  testmap.cpp  testparticleeffect.cpp  testsfml.cpp
